--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,17 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <div class="header-logo">
+    <img src="https://example.com/logo.png" alt="Logo">
+  </div>
   <form #loginForm="ngForm">
     <ion-item>
-      <ion-label position="floating" >Email</ion-label>
+      <ion-label position="floating">Nombre de usuario</ion-label>
       <ion-input type="email" [(ngModel)]="email" name="email" required></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Password</ion-label>
+      <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
     </ion-item>
     <ion-button expand="full" type="submit" (click)="iniciar_sesion()">Login</ion-button>
